--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/slick-theme.css">
     <link rel="stylesheet" href="CSS/hover-min.css">
     <link rel="stylesheet" href="CSS/animate.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/adaptive.css">
     <link rel="stylesheet" href="CSS/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,33 @@
                     <img src="images/logo.png">
                     <span>Soul</span> Yoga</a>
             </div>
+            <div id="menu">
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 384.97 384.97" style="enable-background:new 0 0 384.97 384.97;"
+                 xml:space="preserve"><g>
+	<g id="Grid">
+		<path d="M144.364,0H24.061C10.767,0,0,10.767,0,24.061v120.303c0,13.281,10.767,24.061,24.061,24.061h120.303
+			c13.293,0,24.061-10.779,24.061-24.061V24.061C168.424,10.767,157.657,0,144.364,0z M144.364,144.364H24.061V24.061h120.303
+			V144.364z"/>
+        <path d="M360.909,0H240.606c-13.293,0-24.061,10.767-24.061,24.061v120.303c0,13.281,10.767,24.061,24.061,24.061h120.303
+			c13.281,0,24.061-10.779,24.061-24.061V24.061C384.97,10.767,374.191,0,360.909,0z M360.909,144.364H240.606V24.061h120.303
+			V144.364z"/>
+        <path d="M360.909,216.545H240.606c-13.293,0-24.061,10.779-24.061,24.061v120.303c0,13.293,10.767,24.061,24.061,24.061h120.303
+			c13.281,0,24.061-10.767,24.061-24.061V240.606C384.97,227.313,374.191,216.545,360.909,216.545z M360.909,360.909H240.606
+			V240.606h120.303V360.909z"/>
+        <path d="M144.364,216.545H24.061C10.767,216.545,0,227.325,0,240.606v120.303c0,13.293,10.767,24.061,24.061,24.061h120.303
+			c13.293,0,24.061-10.767,24.061-24.061V240.606C168.424,227.313,157.657,216.545,144.364,216.545z M144.364,360.909H24.061
+			V240.606h120.303V360.909z"/>
+	</g><g></g><g></g><g></g><g></g><g></g><g></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
+</svg>
+        </div>
             <div id="header-menu">
+                <div id="menu-cancel">
+                    <img src="images/cancel.png">
+                </div>
                 <a href="#description" class="header-menu-item hvr-grow">О нас</a>
                 <a href="#teachers" class="header-menu-item hvr-grow">Преподователи</a>
                 <a href="#products" class="header-menu-item hvr-grow">Услуги</a>
@@ -145,7 +172,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-4.jpg')"></div>
                     <div class="teacher-item-name">
                         Людмила Степанова
@@ -155,7 +182,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image  border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-5.png')"></div>
                     <div class="teacher-item-name">
                         Наталия Седова
@@ -165,7 +192,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image  border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-6.jpg')"></div>
                     <div class="teacher-item-name">
                         Ксения Гук
@@ -175,7 +202,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image  border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-7т.jpg')"></div>
                     <div class="teacher-item-name">
                         Николай Котов
@@ -185,7 +212,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image  border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-8.jpeg')"></div>
                     <div class="teacher-item-name">
                         Павел Строцкий
@@ -195,7 +222,7 @@
                     </div>
                 </div>
                 <div class="teacher-item">
-                    <div class="teacher-item-image  border-img"
+                    <div class="teacher-item-image"
                          style="background-image: url('images/teacher-9.jpg')"></div>
                     <div class="teacher-item-name">
                         Мира Зеленько
@@ -221,7 +248,7 @@
                         <div class="price-text">
                             От 40 рублей /месяц
                         </div>
-                        <a href="#" class="btn hvr-wobble-horizontal">
+                        <a href="javascript:void(0)" class="btn hvr-wobble-horizontal yoga-1-action">
                             Подробнее
                         </a>
                     </div>
@@ -237,7 +264,7 @@
                         <div class="price-text">
                             От 70 рублей /месяц
                         </div>
-                        <a href="#" class="btn hvr-wobble-horizontal">
+                        <a href="javascript:void(0)" class="btn hvr-wobble-horizontal yoga-2-action">
                             Подробнее
                         </a>
                     </div>
@@ -253,7 +280,7 @@
                         <div class="price-text">
                             От 60 рублей /месяц
                         </div>
-                        <a href="#" class="btn hvr-wobble-horizontal">
+                        <a href="javascript:void(0)" class="btn hvr-wobble-horizontal yoga-3-action">
                             Подробнее
                         </a>
                     </div>
@@ -269,7 +296,7 @@
                         <div class="price-text">
                             От 30 рублей /месяц
                         </div>
-                        <a href="#" class="btn hvr-wobble-horizontal">
+                        <a href="javascript:void(0)" class="btn hvr-wobble-horizontal yoga-4-action">
                             Подробнее
                         </a>
                     </div>
@@ -277,9 +304,89 @@
 
             </div>
             <div id="products-action" class="animate__animated animate__flipInX wow flipInX">
-                <a href="#" class="btn hvr-bounce-in">
+                <a href="javascript:void(0)" class="btn hvr-bounce-in">
                     Посмотреть расписание
                 </a>
+            </div>
+
+            <div class="more-info-products yoga-1">
+                <div class="more-info-products-container">
+                    <div class="more-info-products-cancel">
+                        <img src="images/cancel.png" class="more-info-products-cancel-close">
+                    </div>
+                    <h2 class="title">Хатха-йога</h2>
+                    <div class="more-info-products-text">
+                        Хатха йога относится к тому направлению йоги, где основной целью практики является физическое
+                        здоровье человека. Состояние полного здоровья как никогда приближает личность к высшим истинам и
+                        гармонии.
+                        Основа хатха йоги в каждой тренировке заключается полной проработке тела за счет упражнений на
+                        спину, ноги, пресс и гибкости. Асаны хатха йоги не только воздействуют на мышцы тела, но и
+                        стимулируют выработку гормонов, а также массируют внутренние органы брюшной полости человека.
+                    </div>
+                </div>
+            </div>
+            <div class="more-info-products yoga-2">
+                <div class="more-info-products-container">
+                    <div class="more-info-products-cancel">
+                        <img src="images/cancel.png" class="more-info-products-cancel-close">
+                    </div>
+                    <h2 class="title">Кундалили йога</h2>
+                    <div class="more-info-products-text">
+                        Кундалини Йога – это технология, чтобы улучшить свою жизнь и сделать ее более эффективной. Это
+                        инструмент для того чтобы жить с большей пользой и отдачей. И действовать более целенаправленно.
+                        Кундалини Йога подходит для современного человека, потому что она действует быстро. За одну
+                        минуту специального дыхания вы уже чувствуете себя иначе. Всего за одну минуту можно стать
+                        бодрее или наоборот успокоиться и снять стресс.
+                        Она дает ощутимый результат за короткое время. Конечно, вы можете заниматься целый час или
+                        полчаса или полтора часа. Или делать долгие медитации. Но если у вас мало времени – в Кундалини
+                        Йоге вы найдете множество техник, которые дают нужный результат всего за несколько минут.
+                        Всего за несколько минут вы почувствуете себя лучше и спокойнее. У вас будет больше энергии и
+                        уверенности в себе. Вы будете более ясно мыслить, и сможете сконцентрироваться на главном. И
+                        расслабиться по поводу всего остального.
+                    </div>
+                </div>
+            </div>
+            <div class="more-info-products yoga-3">
+                <div class="more-info-products-container">
+                    <div class="more-info-products-cancel">
+                        <img src="images/cancel.png" class="more-info-products-cancel-close">
+                    </div>
+                    <h2 class="title">Термо-йога</h2>
+                    <div class="more-info-products-text">
+                        Практика термо-йоги включает в себя определенную последовательность асан из хатха-йоги и двух
+                        дыхательных упражнений, которые выполняются в нагретом помещении. Каждая поза подготавливает
+                        тело к следующей, а их последовательность увеличивает приток кислорода и улучшает выведение
+                        токсинов из организма. Таким образом, этот вид упражнений работает надо всем организмом в
+                        комплексе, совершенствуя сердечно-сосудистую, кровеносную, дыхательную, опорно-двигательную и
+                        другие cистемы нашего тела. Поэтому термо-йога позволяет быстро восстановиться после травм.
+                        У термо-йоги огромное количество положительных эффектов, таких как улучшение кровообращения,
+                        состояния кожи, повышение силы, выносливости и гибкости, избавление от лишнего веса и улучшение
+                        обмена веществ. При регулярной практике она помогает улучшить иммунитет и справиться с
+                        симптомами хронических заболеваний, таких как диабет, астма, артрит, заболевания щитовидной
+                        железы.
+                    </div>
+                </div>
+            </div>
+            <div class="more-info-products yoga-4">
+                <div class="more-info-products-container">
+                    <div class="more-info-products-cancel">
+                        <img src="images/cancel.png" class="more-info-products-cancel-close">
+                    </div>
+                    <h2 class="title">Йога аштанга</h2>
+                    <div class="more-info-products-text">
+                        Аштанга-йога – это особая практика, сформировавшаяся в русле хатха-йоги. Если классическая йога
+                        уделяет первоочередное внимание дыхательным упражнениям, развитию гибкости и расслаблению, то
+                        аштанга-йога формирует силу духа и тела. Для того, чтобы достичь главной цели, – самадхи
+                        (полного равновесия, духовного совершенства), – нужно будет пройти восемь непростых этапов.
+                        Данная практика отлично подходит для тех, у кого сильное тело и разум, жаждущий свершений. К
+                        практике аштанга-йоги прибегают чаще люди, желающие укрыться в собственном духовном мире от
+                        внешних проблем.
+                        Каждый из восьми этапов Пути по-своему непрост. Первые два, пожалуй, одни из самых
+                        ответственных, так как учат человека психогигиеническим правилам жизни. Если нет достаточно
+                        желания и силы воли сделать их своим образом жизни, переходить к следующим этапам просто
+                        бессмысленно.
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -357,13 +464,22 @@
                     <img src="images/flower.png" id="bg-flower">
                     <div id="discount">Первое занятие - скидка 10%
                     </div>
-                    <form>
-                        <input type="text" name="name" id="name" class="form-info" placeholder="Ваше имя">
-                        <div class="error-text">Заполните имя</div>
-                        <input type="textr" name="phone" id="phone" class="form-info" placeholder="Ваш телефон">
-                        <div class="error-text">Заполните ваш телефон</div>
-                        <button class="btn btn-send hvr-shutter-in-horizontal" type="button">Записаться на урок</button>
-                    </form>
+                    <form class="needs-validation" novalidate>
+                        <div class="form-v">
+                            <div class="col-md-6 mb-3">
+                                <input type="text" class="form-control form-info" id="validationCustom01" placeholder="Ваше имя" required>
+                                <div class="invalid-feedback er">
+                                    Заполните имя
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <input type="text" class="form-control form-info" id="validationCustom02" placeholder="Ваш телефон" required>
+                                <div class="invalid-feedback er">
+                                    Заполните ваш телефон
+                                </div>
+                            </div>
+                            <button class="btn hvr-shutter-in-horizontal" type="submit">Записаться на урок</button>
+                        </div>
                     <div id="form-send">
                         <div id="form-send-text">
                             Спасибо! Вашу заявку отправлено. В ближайшее время с Вами свяжется наш администратор!
@@ -406,18 +522,15 @@
                                 Соц сети:
                             </div>
                             <div id="social">
-                                <a href="#"><img src="images/Instagram.png"></a>
-                                <a href="#"><img src="images/Facebook.png"></a>
-                                <a href="#"><img src="images/vk.png"></a>
+                                <a href="https://www.instagram.com/yoga/?hl=ru" target="_blank"><img src="images/Instagram.png"></a>
+                                <a href="https://www.facebook.com/groups/681404501990417" target="_blank"><img src="images/Facebook.png"></a>
+                                <a href="https://vk.com/yoga_practica" target="_blank"><img src="images/vk.png"></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </div>
-
         <div id="footer">
             <div class="logo hvr-grow">
                 <a href="#main-info">
@@ -425,7 +538,7 @@
                     <span>Soul</span> Yoga</a>
             </div>
             <div id="privacy_policy">
-                Политика конфиденциальности
+                <a href="#">Политика конфиденциальности</a>
             </div>
             <div id="rights">
                 Все права защищены
@@ -455,6 +568,7 @@
 
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/main.js"></script>
 
