https://github.com/apolinariaK/Soul-Yoga.git

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                             <div class="col-md-6 mb-3">
                                 <input type="text" class="form-control form-info" id="validationCustom01" placeholder="Ваше имя" required>
                                 <div class="invalid-feedback er">
-                                    Заполните имя
+                                    Заполните ваше имя
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
