https://github.com/apolinariaK/Soul-Yoga.git

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     <img src="images/flower.png" id="bg-flower">
                     <div id="discount">Первое занятие - скидка 10%
                     </div>
-                    <form class="needs-validation" novalidate>
+                    <form class="needs-validation" novalidate method="post">
                         <div class="form-v">
                             <div class="col-md-6 mb-3">
                                 <input type="text" class="form-control form-info" id="validationCustom01" placeholder="Ваше имя" required>
@@ -485,6 +485,7 @@
                             Спасибо! Вашу заявку отправлено. В ближайшее время с Вами свяжется наш администратор!
                         </div>
                     </div>
+                        </form>
                 </div>
                 <div id="facts">
                     <div id="map">
@@ -566,7 +567,7 @@
     </div>
 </div>
 
-<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/jquery-3.5.1.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
